// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Renders the UI snapshot correctly 1`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  data-testid="ds-accordion"
  id="test-id"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-test-id-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1b3zdr8"
      disabled={false}
      id="accordion-button-test-id-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgPlus"
        focusable={false}
        id="test-id-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 2`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  data-testid="ds-accordion"
  id="accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1b3zdr8"
      disabled={false}
      id="accordion-button-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgPlus"
        focusable={false}
        id="accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 3`] = `
<div
  className="chakra-accordion css-1t0bvx9"
  data-testid="ds-accordion"
  id="accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1b3zdr8"
      disabled={false}
      id="accordion-button-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgPlus"
        focusable={false}
        id="accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 4`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  data-testid="testid"
  id="accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1b3zdr8"
      disabled={false}
      id="accordion-button-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgPlus"
        focusable={false}
        id="accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 5`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  data-testid="ds-accordion"
  id="accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1b3zdr8"
      disabled={false}
      id="accordion-button-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgPlus"
        focusable={false}
        id="accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 6`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  data-testid="ds-accordion"
  id="accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1j8dtlq"
      disabled={false}
      id="accordion-button-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgPlus"
        focusable={false}
        id="accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 7`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  data-testid="ds-accordion"
  id="accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-13del6y"
      disabled={false}
      id="accordion-button-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgPlus"
        focusable={false}
        id="accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;
